...
import 'package:url_launcher/url_launcher.dart';
import 'package:precarina/l10n/app_localizations.dart';

import 'model/precarina_model.dart';

// Keys for testing, ensuring consistency with app_test.dart
const Key heightInputKey = Key('height_input_field');
const Key weightKilosInputKey = Key('weight_kilos_input_field');
const Key weightGramsInputKey = Key('weight_grams_input_field');
const Key ageYearsDropdownKey = Key('age_years_dropdown');
const Key ageMonthsDropdownKey = Key('age_months_dropdown');
const Key genderFemaleRadioKey = Key('gender_female_radio');
const Key genderMaleRadioKey = Key('gender_male_radio');
const Key calculateButtonKey = Key('calculate_button');
// const Key resetButtonKey = Key('reset_button'); // Example if you want to test reset

final dateFormat = DateFormat('dd-MM-yyyy');

class InputDataPage extends StatefulWidget {
  const InputDataPage({
...
