...
  "txtReadCarefully": "Please read carefully before using this app",
  "txtAppPurpose": "This app calculates the estimated cardiovascular health score as defined by the",
  "txtFundamentalsLocation": "The scoring system and criteria are thoroughly explained in:",
  "txtLifeEssentialEightObjective": "Life’s Essential 8: Updating and Enhancing the American Heart Association’s Construct of Cardiovascular Health: A Presidential Advisory From the American Heart Association",
  "txtPaperAuthors": "Published by: Donald M. Lloyd-Jones, MD, ScM, FAHA, Chair; Norrina B. Allen, PhD, MPH, FAHA; Cheryl A.M. Anderson, PhD, MPH, MS, FAHA; Terrie Black, DNP, MBA, CRRN, FAHA; LaPrincess C. Brewer, MD, MPH; Randi E. Foraker, PhD, MA, FAHA; Michael A. Grandner, PhD, MTR, FAHA; Helen Lavretsky, MD, MS; Amanda Marma Perak, MD, MS, FAHA; Garima Sharma, MD; Wayne Rosamond, PhD, MS, FAH
  "txtFundamentalsLocationMainWindow": "Click here to read the foundations",
  "txtButtonAcceptTandC": "Accept",
  "txtButtonRejectTandC": "Cancel",
  "txtButtonWarnings": "Accept",
  "txtButtonAccept": "Accept",
  "txtButtonCancel": "Cancel",
  "txtCancelModalTitle": "Are you sure?",
  "txtCancelModalText": "Do you want to discard your changes?",
...
  "suffixAnos": " years",
  "suffixMes": " month",
  "suffixMeses": " months",
  "btnResetFields": "Reset",
  "btnContinue": "Continue",
  "DATA INPUT END": "*************************************************************************************************************************************",
  "txtDietButton": "Diet",
  "txtDietDialog": "Quantiles of DASH-style diet adherence (MEPA). Ages 2-19 y.';",
  "txtDietDialogOptions": "9-10 MEPA score points|7-8 MEPA score points|5-6 MEPA score points|3-4 MEPA score points|0-2 MEPA score points",
  "txtDietHelp": "**Quantiles of DASH-style diet adherence (MEPA)** refers to a statistical analysis method used to assess adherence to the DASH-style diet (DASH: Dietary Approaches to Stop Hypertension), which is a dietary pattern that emphasizes the consumption of fruits, vegetables, whole grains, lean proteins, and low-fat dairy products, while limiting intake of sodium, added sugars, and satur
  "txtDietWarning": "",
  "txtPhysicalActivityButton": "Physical Activity",
  "txtPhysicalActivityDialog": "Minutes of moderate or greater intensity activity per week. Ages: 6 to 9.",
...
