...
    }
  }

  @override
  Widget build(BuildContext context) {
    // Removed bc = context assignment
    const Key mainScaffoldKey = ValueKey('mainScaffold');
    return Scaffold(
      key: mainScaffoldKey,
      appBar: AppBar(
        title: const Text(
          'PRECARINA',
          textAlign: TextAlign.center,
...
